# MilvusPG

./: README.md
Python/: .gitignore  README.md  VERSIONS.md  requirements.txt
Python/common/py/: pyproject.toml
Python/common/py/mvcommon/: __init__.py  bench.py  cli.py  connection.py  datasets.py  embeddings.py
Python/infra/: docker-compose.yml
Python/partIII_indexing/benchmark_harness/py/: README.md  sweep.py
Python/partIII_indexing/m3_1_index_zoo/py/: README.md  demo.py
Python/partIII_indexing/m3_3_consistency/py/: README.md  demo.py
Python/partIII_indexing/m3_4_filtered_search/py/: README.md  demo.py
Python/partII_modeling/m2_1_collections_schema/py/: README.md  demo.py
Python/partII_modeling/m2_2_partitions/py/: README.md  demo.py
Python/partII_modeling/m2_3_insert_upsert_delete/py/: README.md  demo.py
Python/partIV_retrieval/m4_1_hybrid_search/py/: README.md  demo.py
Python/partIV_retrieval/m4_2_full_text_bm25/py/: README.md  demo.py
Python/partIV_retrieval/m4_4_iterators_grouping/py/: README.md  demo.py
Python/partI_fundamentals/m1_1_why_vectordb/py/: README.md  demo.py
Python/partI_fundamentals/m1_2_distance_metrics/py/: README.md  demo.py
Python/partI_fundamentals/m1_3_connect_client/py/: README.md  demo.py
Python/partVIII_research/m8_1_anomaly/py/: README.md  demo.py
Python/partVIII_research/m8_2_scientific_embeddings/py/: README.md  demo.py
Python/partVII_slam/m7_1_dbow_loopclosure/py/: README.md  demo.py
Python/partVII_slam/m7_3_living_map/py_lite/: README.md  demo.py
Python/scripts/: run_all_lite.sh
(+6 files in other folders)
