[project]
name = "mvcommon"
version = "0.1.0"
description = "Shared helpers for the Milvus deep-dive Python codebase"
requires-python = ">=3.10"
dependencies = ["pymilvus==2.6.14", "numpy>=1.26,<3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mvcommon*"]
